--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,12 @@
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>deploymentRepo</id>
-		    <url>http://13.232.200.78:8081/repository/maven-snapshots//</url>
+		    <url>http://http://13.232.200.78:8081/repository/maven-snapshots//</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>deploymentRepo</id>
-		    <url>http://13.232.200.78:8081/repository/maven-releases//</url>
+		    <url>http://http://13.232.200.78:8081/repository/maven-releases//</url>
 		</repository>
   	</distributionManagement>
 
